add link to color palette in css comments

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -50,3 +50,5 @@ img {
   height: 100px;
   padding-top: 30px;
 }
+
+/*This is the color palette we're using: http://colorpalettes.net/color-palette-2710/*/
